move v1_3_4 tag